[tool.poetry]
name = "aiob2"
version = "0.5.0"
description = "A simple and easy to use async wrapper for Backblaze's B2 bucket API."
license = "MIT"
authors = ["Dan <the.void.altacc@gmail.com>"]

readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Void-ux/aiob2/issues/"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.2"
aiohttp = "^3.8.1"
pytest-asyncio = "^0.19.0"

[tool.poetry.dev-dependencies]

[tool.pyright]
typeCheckingVersion = "strict"
pythonVersion = "3.8"
reportUnusedImport = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportIncompatibleMethodOverride = "warning"

[tool.pytest.ini_options]
asyncio_mode = "strict"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"