[project]
name = "aiob2"
version = "0.9.1"
description = "A simple and easy to use async wrapper for Backblaze's B2 bucket API."
license = "MIT"
authors = [{ name = "Dan", email = "the.void.altacc@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["backblaze", "b2", "cloud", "storage"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "aiohttp>=3.8.1,<4",
    "typing-extensions>=4.4.0,<5",
    "aiofiles>=24.1.0,<25",
]

[project.optional-dependencies]
speed = ["orjson"]

[project.urls]
Repository = "https://github.com/Void-ux/aiob2"
Documentation = "https://aiob2.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/Void-ux/aiob2/issues/"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio>=0.19.0,<1",
    "pytest-order>=1.0.1,<2",
    "furo>=2022.12.7",
    "sphinxcontrib-trio>=1.1.2,<2",
]

[tool.pyright]
typeCheckingVersion = "strict"
pythonVersion = "3.9"
reportUnusedImport = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportIncompatibleMethodOverride = "warning"

[tool.pytest.ini_options]
asyncio_mode = "strict"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
